# AI-Booking-Agent

./: README.md  pyproject.toml
backend/: agent.py  app.py  calendar_service.py  models.py
frontend/: streamlit_app.py
static/: style.css
